# cwru-ros-pkg-hydro

./: .gitignore  README.md
Bashes/: Save.sh
Bashes and other things/: StartupPull.sh  Useful things.txt  push_to_jinx.sh
catkin/src/cwru_376_student/: changed IM_interface
catkin/src/cwru_376_student/Old_code/example_des_state_generator_old/: CMakeLists.txt  package.xml
catkin/src/cwru_376_student/Old_code/example_steering_algorithm_old/: CMakeLists.txt  package.xml
catkin/src/cwru_376_student/des_state_generator/: CMakeLists.txt  README.md  package.xml
catkin/src/cwru_376_student/des_state_generator/src/: des_state_generator.cpp  path_sender.cpp  (+1 more)
catkin/src/cwru_376_student/example_robot_commander/: CMakeLists.txt  README.md
catkin/src/cwru_376_student/irb120_IM_interface_jpc87/: CMakeLists.txt  README.md  package.xml
catkin/src/cwru_376_student/lidar_alarm/: CMakeLists.txt  README.md
catkin/src/cwru_376_student/lidar_space_detection/: CMakeLists.txt  README.md  gazebo_lidar_test_world.sdf  lidar_test_rviz_config.rviz  package.xml
catkin/src/cwru_376_student/path_planner/: CMakeLists.txt  README.md  package.xml
catkin/src/cwru_376_student/pc_processing/: CMakeLists.txt  README.md  package.xml
catkin/src/cwru_376_student/pc_processing/src/: find_can.cpp
catkin/src/cwru_376_student/steering_old_jpc87/: CMakeLists.txt  package.xml
catkin/src/cwru_376_student/steering_wcb38/: CMakeLists.txt  README.md  package.xml
catkin/src/cwru_376_student/stopper_controller/: CMakeLists.txt  README.md  package.xml
catkin/src/motor_controller/: README.md
(+30 files in other folders)
